--- a/client/src/app/table/table-list/table-list.component.html
+++ b/client/src/app/table/table-list/table-list.component.html
@@ -74,9 +74,9 @@
       } @else {
         <div class="grid grid-cols-3 w-full gap-12">
           <label for="description" class="col-span-1">
-            <p class="font-medium">Auto-Adding P. Key</p>
+            <p class="font-medium">Primary Key</p>
             <p class="text-surface-500 text-xs">
-              Enable automatic primary key "id" column for this table.
+              Auto-Adding a primary key "id" column for this table.
             </p>
           </label>
           <div class="col-span-2">
@@ -92,7 +92,7 @@
           <label for="description" class="col-span-1">
             <p class="font-medium">Timestamps</p>
             <p class="text-surface-500 text-xs">
-              Enable automatic createdAt and updatedAt columns for this table.
+              Enable automatic "Created At" and "Updated At" columns for this table.
             </p>
           </label>
           <div class="col-span-2">
