--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -49,6 +49,17 @@ $transition-duration: 0.2s;
       right: -$chatbot-width;
       width: $chatbot-width;
       transition: right $transition-duration;
+
+      &.fullscreen {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+      }
     }
   }
 }
