feat: standardize event naming for drawer components and update related bindings

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -40,7 +40,7 @@
       <app-chatbot
         [visible]="chatbotVisible()"
         (fullscreen)="chatbotFullscreen.set($event)"
-        (closed)="chatbotVisible.set(false)"
+        (onClose)="chatbotVisible.set(false)"
       />
     </div>
   </div>
