--- a/client/src/app/common/spreadsheet/components/field-cell/json/cell.component.html
+++ b/client/src/app/common/spreadsheet/components/field-cell/json/cell.component.html
@@ -17,7 +17,7 @@
       <json-editor-drawer
         [(visible)]="visibleJSONEditor"
         [value]="jsonText"
-        (saved)="save($any($event))"
+        (onSave)="save($any($event))"
       />
       <div
         class="hover:bg-surface-50 text-surface-500 cursor-pointer w-5 h-5 rounded-md flex items-center justify-center"
