--- a/client/src/app/table/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/table/record-editor/record-editor-drawer.component.html
@@ -149,12 +149,12 @@
     <rich-text-editor-drawer
       [(visible)]="visibleRichTextEditor"
       [(value)]="editingRichText"
-      (saved)="updatedRecord[editingRichTextField?.name] = $event"
+      (onSave)="updatedRecord[editingRichTextField?.name] = $event"
     />
     <json-editor-drawer
       [(visible)]="visibleJSONEditor"
       [(value)]="editingJSONText"
-      (saved)="updatedRecord[editingJSONField?.name] = $event"
+      (onSave)="updatedRecord[editingJSONField?.name] = $event"
     />
     <div class="flex flex-col gap-12">
       @for (field of requiredFields(); let first = $first; track field.name) {
