--- a/client/src/app/base/base.component.html
+++ b/client/src/app/base/base.component.html
@@ -3,6 +3,46 @@
     <table-list />
   </div>
   <div class="base-table-detail w-full h-full">
-    <table-detail />
+    @let hasSelectedTable = !!tblService.selectedTable();
+
+    <p-tabs value="0" class="w-full h-full">
+      <p-tablist>
+        <div class="flex items-center px-2">
+          <p-button
+            [icon]="`icon ${sidebarVisible() ? 'icon-panel-left-close' : 'icon-panel-right-close'}`"
+            [text]="true"
+            size="large"
+            [pTooltip]="sidebarVisible() ? 'Collaspe sidebar' : 'Expand sidebar'"
+            tooltipPosition="bottom"
+            severity="secondary"
+            (click)="toggleSidebar()"
+          />
+        </div>
+        @if (hasSelectedTable) {
+          <p-tab value="0">
+            <div class="flex items-center">
+              <i class="icon icon-table-2 mr-2"></i>
+              <span>{{ tblService.selectedTable().tableName }}</span>
+            </div>
+          </p-tab>
+        }
+      </p-tablist>
+      @if (hasSelectedTable) {
+        <p-tabpanels class="flex-1 !p-0">
+          <p-tabpanel value="0">
+            <table-detail />
+          </p-tabpanel>
+        </p-tabpanels>
+      }
+    </p-tabs>
+
+    @if (!hasSelectedTable) {
+      <div class="flex flex-col w-full h-full items-center justify-center m-1">
+        <p-image src="assets/images/chill-guy.png" alt="Image" width="320" />
+        <p class="text-surface-500 italic flex items-center">
+          <span>Unlock insights by picking any table to explore its data!</span>
+        </p>
+      </div>
+    }
   </div>
 </div>
