feat: Update sidebar and chatbot visibility handling in components

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -23,7 +23,7 @@
       />
     </div>
   </div>
-  <div class="app-main w-full h-full" [class.chatbot--opening]="chatbotVisible()">
+  <div class="app-main w-full h-full" [class.chatbot--visible]="chatbotVisible()">
     <div class="app-sidebar border-r-1 border-surface-200"></div>
     <div class="w-full h-full">
       <router-outlet />
