--- a/client/src/app/base/base.component.html
+++ b/client/src/app/base/base.component.html
@@ -7,7 +7,7 @@
 
     <p-tabs value="0" class="w-full h-full">
       <p-tablist>
-        <div class="flex items-center px-1">
+        <div class="flex items-center p-1">
           <p-button
             [icon]="`icon ${sidebarVisible() ? 'icon-panel-left-close' : 'icon-panel-right-close'}`"
             [text]="true"
