--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -23,8 +23,27 @@
       />
     </div>
   </div>
-  <div class="app-main w-full h-full" [class.chatbot--visible]="chatbotVisible()">
-    <div class="app-sidebar border-r-1 border-surface-200"></div>
+  <div class="app-main w-full h-full flex" [class.chatbot--visible]="chatbotVisible()">
+    <div class="border-r-1 border-surface-200">
+      <ul class="p-2 flex flex-col gap-2">
+        <li
+          class="flex flex-items gap-2 items-center p-3 rounded-lg hover:bg-gray-100 text-surface-500 cursor-pointer"
+          [pTooltip]="'Base'"
+          routerLink="/base"
+          routerLinkActive="bg-gray-100 text-surface-700"
+        >
+          <i class="icon icon-layers" style="font-size: 16px"></i>
+        </li>
+        <li
+          class="flex flex-items gap-2 items-center p-3 rounded-lg hover:bg-gray-100 text-surface-500 cursor-pointer"
+          [pTooltip]="'API Keys'"
+          routerLink="/api-keys"
+          routerLinkActive="bg-gray-100 text-surface-700"
+        >
+          <i class="icon icon-key" style="font-size: 16px"></i>
+        </li>
+      </ul>
+    </div>
     <div class="w-full h-full">
       <router-outlet />
     </div>
