--- a/client/src/app/base/table/table-list/table-list.component.html
+++ b/client/src/app/base/table/table-list/table-list.component.html
@@ -33,7 +33,7 @@
   (onSave)="onTableEditorSave()"
 />
 
-<div class="flex items-center justify-between px-4 py-2 border-b-1 border-surface-200">
+<div class="flex items-center justify-between pl-4 pr-2 py-2 border-b-1 border-surface-200">
   <div>Tables</div>
   <div class="flex">
     <p-button
