--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -4,7 +4,11 @@
   <div
     class="app-topbar flex items-center justify-between gap-2 pl-2 pr-4 py-2 border-b-1 border-surface-200"
   >
-    <div class="flex items-center"></div>
+    <div class="flex items-center">
+      <div class="px-0.5">
+        <p-image src="assets/images/logo.png" width="32" />
+      </div>
+    </div>
     <div class="flex gap-2 items-center">
       <p-button
         icon="icon icon-book-open-text"
