--- a/client/src/app/base/base.component.html
+++ b/client/src/app/base/base.component.html
@@ -1,11 +1,11 @@
+@let hasSelectedTable = !!tblService.selectedTable();
+
 <div class="base w-full h-full" [class.sidebar--invisible]="!sidebarVisible()">
   <div class="base-sidebar border-r-1 border-surface-200">
     <table-list />
   </div>
   <div class="base-table-detail w-full h-full">
-    @let hasSelectedTable = !!tblService.selectedTable();
-
-    <p-tabs value="0" class="w-full h-full">
+    <p-tabs value="0" class="w-full" [class.h-full]="hasSelectedTable">
       <p-tablist>
         <div class="flex items-center p-1">
           <p-button
@@ -37,8 +37,8 @@
     </p-tabs>
 
     @if (!hasSelectedTable) {
-      <div class="flex flex-col w-full h-full items-center justify-center m-1">
-        <p-image src="assets/images/chill-guy.png" alt="Image" width="320" />
+      <div class="flex flex-col w-full h-full items-center justify-center bg-gray-100">
+        <p-image src="assets/images/chill-bear.png" alt="Image" width="320" />
         <p class="text-surface-500 italic flex items-center">
           <span>Unlock insights by picking any table to explore its data!</span>
         </p>
