--- a/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
+++ b/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-screen items-center justify-center bg-gray-50">
   <p-card class="w-full max-w-md shadow-lg">
     <ng-template pTemplate="header">
-      <div class="flex flex-col items-center pt-6 gap-2">
+      <div class="flex flex-col items-center pt-6 pb-2 gap-2">
         <img src="assets/images/logo.png" alt="Logo" class="h-20" />
         <p class="font-medium text-lg">Welcome to PolarBase</p>
       </div>
