--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -37,9 +37,9 @@
     </p-tabs>
 
     @if (!hasSelectedTable) {
-      <div class="flex flex-col w-full h-full items-center justify-center bg-gray-100">
+      <div class="flex flex-col w-full h-full items-center pt-50 bg-gray-50">
         <p-image src="assets/images/chill-bear.png" alt="Image" width="320" />
-        <p class="text-surface-500 italic flex items-center">
+        <p class="text-surface-500 italic flex items-center" style="margin-top: -45px">
           <span>Unlock insights by picking any table to explore its data!</span>
         </p>
       </div>
