feat: add API key management component and service, update routes and database schema

--- a/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
+++ b/client/src/app/features/api-keys/api-key-entry/api-key-entry.component.html
@@ -9,7 +9,7 @@
 
     <div class="flex flex-col gap-6">
       <p-iconField iconPosition="left">
-        <p-inputIcon class="pi pi-key" />
+        <p-inputIcon class="icon icon-key" />
         <input
           pInputText
           [(ngModel)]="apiKey"
