--- a/client/src/app/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/layouts/main-layout/main-layout.component.html
@@ -47,7 +47,7 @@
           <i class="icon icon-key" style="font-size: 16px"></i>
         </li>
       </ul>
-      <ul class="p-2 flex flex-col gap-2">
+      <ul class="p-2 flex flex-col gap-2 mb-4">
         <li
           class="flex flex-items gap-2 items-center p-3 rounded-lg hover:bg-gray-100 text-surface-500 cursor-pointer"
           [pTooltip]="'Logout'"
